--- a/help.html
+++ b/help.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
-<title>**App Name** Portable Help</title>
+<title>360 Browser Portable Help</title>
 <link rel="alternate" href="http://portableapps.com/feeds/general" type="application/rss+xml" title="PortableApps.com">
 <link rel="shortcut icon" href="Other/Help/Images/Favicon.ico">
 <style type="text/css">
@@ -125,17 +125,16 @@
 <body>
 <div class="logo"><a href="http://portableapps.com/"><img src="Other/Help/Images/Help_Logo_Top.png" alt="PortableApps.com - Your Digital Life, Anywhere"></a></div>
 <div class="content">
-<h1 class="hastagline">**App Name** Portable Help</h1>
-<h2 class="tagline">**insert catchy tag line**</h2>
-<p>**App Name** Portable is the **App Name** whatever it is packaged with a PortableApps.com launcher as a <a href="http://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can **do something** on your iPod, USB flash drive, portable hard drive, etc. It has all the same features as **App Name**, plus, it leaves no personal information behind on the machine you run it on, so you can take it with you wherever you go. <a href="http://**appname.com**">Learn more about **App Name**...</a></p>
+<h1 class="hastagline">360 Browser Portable Help</h1>
+<h2 class="tagline">web browser</h2>
+<p>360 Browser Portable is the 360 Browser packaged with a PortableApps.com launcher as a <a href="http://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can browsing the internet on your iPod, USB flash drive, portable hard drive, etc. It has all the same features as 360 Browser, plus, it leaves no personal information behind on the machine you run it on, so you can take it with you wherever you go. <a href="http://www.360safe.com/browser.html">Learn more about 360 Browser...</a></p>
 
 <p><a href="http://portableapps.com/donate"><img src="Other/Help/Images/Donation_Button.png" style="vertical-align:middle" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development</p>
 
-<p><a href="http://portableapps.com/node/*Node ID*">Go to the **App Name** Portable Homepage &gt;&gt;</a></p>
+<p><a href="http://portableapps.com/360BrowserPortable">Go to the 360 Browser Portable Homepage &gt;&gt;</a></p>
 <p><a href="http://portableapps.com/">Get more portable apps at PortableApps.com</a></p>
 
 <!-- If the software being packaged is open source under an OSI approved license, delete the second paragraph below.  If the software being packaged is freeware or not OSI certified, delete the first paragraph below. -->
-<p>This software is OSI Certified Open Source Software. OSI Certified is a certification mark of the Open Source Initiative.</p>
 <p>The PortableApps.com Launcher that portablizes this application and the PortableApps.com Installer used to package this application are OSI Certified Open Source Software. OSI Certified is a certification mark of the Open Source Initiative. The base application is under a different license.</p>
 
 <h2>Portable App Issues</h2>
